# finance-agents-workflow

./: .gitignore  LICENSE  README.md  pyproject.toml  run_app.py
src/ai_finance_agent_team/: __main__.py  agent_team.py  app.py  tools.py
src/ai_finance_agent_team/storage/: agents.db  generated_report_example.html
tests/app/: test_app.py
tests/integration/: test_agents.py
tests/unit/: test_tools.py
